--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "umi-request-cancel",
+  "name": "easy-umi-request-cancel",
   "version": "1.1.4",
   "description": "umi-request cancel by key",
-  "main": "./lib/umi-request-cancel.umd.js",
-  "module": "./lib/umi-request-cancel.es.js",
+  "main": "./lib/easy-umi-request-cancel.umd.js",
+  "module": "./lib/easy-umi-request-cancel.es.js",
   "exports": {
     ".": {
-      "import": "./lib/umi-request-cancel.es.js",
-      "require": "./lib/umi-request-cancel.umd.js"
+      "import": "./lib/easy-umi-request-cancel.es.js",
+      "require": "./lib/easy-umi-request-cancel.umd.js"
     }
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:itkui/umi-request-cancel.git"
+    "url": "git@github.com:itkui/easy-umi-request-cancel.git"
   },
-  "bugs": "https://github.com/itkui/umi-request-cancel/issues",
+  "bugs": "https://github.com/itkui/easy-umi-request-cancel/issues",
   "scripts": {
     "dev": "vite",
     "build": "tsc & vite build",
@@ -22,7 +22,7 @@
     "start": "yarn dev & yarn dev:server"
   },
   "keywords": [
-    "umi-request-cancel",
+    "easy-umi-request-cancel",
     "umi-request"
   ],
   "author": {
@@ -31,19 +31,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^17.0.12",
-    "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.13"
   },
   "dependencies": {
     "umi-request": "^1.4.0"
   },
-  "types": "lib/index.d.ts",
+  "types": "types/easy-umi-request-cancel.d.ts",
   "files": [
-    "lib/*.js",
-    "lib/*.d.ts",
+    "lib/",
+    "types/easy-umi-request-cancel.d.ts",
     "package.json",
     "README.md"
   ]
